added veggies list

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
   <head>
   </head>
   <body>
-    millie's page!!
+   <h1>Millie's Garden</h1>
+   <h3>Prime Digital Academy Workshop</h3>
+   
+   <h4> Veggies List</h4> 
+   <ul>
+     <li>Tomatoes</li>
+     <li>Peppers</li>
+     <li>Onions</li>
+   </ul>
   </body>
 </html>
