--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
    
    <h4> Veggies List</h4> 
    <ul>
-     <li>Tomatoes</li>
+     <li>
+       Tomatoes
+       <img src="https://sc01.alicdn.com/kf/UT88p1uXEJXXXagOFbXz/Fresh-tomatoes.jpg" alt="Image of Tomato"/>
+     </li>
      <li>Peppers</li>
      <li>Onions</li>
    </ul>
