added some html 5

--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
   <head>
   </head>
   <body>
-   <h1>Millie's Garden</h1>
-   <h3>Prime Digital Academy Workshop</h3>
-   
-   <h4> Veggies List</h4> 
-   <ul>
-     <li>
-       Tomatoes
-       <img src="https://sc01.alicdn.com/kf/UT88p1uXEJXXXagOFbXz/Fresh-tomatoes.jpg" alt="Image of Tomato"/>
-     </li>
-     <li>Peppers</li>
-     <li>Onions</li>
-   </ul>
+   <header>
+      <h1>Millie's Garden</h1>
+      <h3>Prime Digital Academy Workshop</h3>
+   </header> 
+    <article>
+      <h4> Veggies List</h4> 
+       <ul>
+         <li>
+           Tomatoes
+           <img src="https://sc01.alicdn.com/kf/UT88p1uXEJXXXagOFbXz/Fresh-tomatoes.jpg" alt="Image of Tomato" height="100" width="150"/>
+         </li>
+         <li>Peppers</li>
+         <li>Onions</li>
+       </ul>
+     </article>
   </body>
+  <footer>
+    Millie's Garden LLC
+  </footer> 
 </html>
