link our css and add title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <title>Millie's Garden</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
    <header>
