update the html to show the end

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    <header>
       <h1>Millie's Garden</h1>
       <h3>Prime Digital Academy Workshop</h3>
-   </header> 
-    <article>
-      <h4> Veggies List</h4> 
+   </header>
+    <article class="garden-content">
+      <h4> Veggies List</h4>
        <ul>
          <li>
            Tomatoes
@@ -19,8 +19,16 @@
          <li>Onions</li>
        </ul>
      </article>
+     
+     <!-- showing class vs id  -->
+     <article id="first-post" class="blog">
+       I love tomatoes!
+     </article>
+     <article class="blog">
+       my tomoes have blight!
+     </article>
   </body>
   <footer>
     Millie's Garden LLC
-  </footer> 
+  </footer>
 </html>
